text align center fixed

--- a/styles/ProductsNew.module.scss
+++ b/styles/ProductsNew.module.scss
@@ -120,7 +120,7 @@
           flex-direction: column;
 
           .sub_categories_image_div {
-            width: 120px;
+            // width: 120px;
             height: 120px;
             background-color: rgb(242, 242, 242);
             border-radius: 50%;
